@@ -2,7 +2,7 @@
   ShopifyApp.ready(function(){
     ShopifyApp.Bar.initialize({
       title: "Home",
-      icon: "<%= asset_path('faveicon.png') %>"
+      icon: "<%= asset_path('favicon.ico') %>"
     });
   });
 </script>
