@@ -10,12 +10,16 @@ require 'shopify_app/configuration'
 # engine
 require 'shopify_app/engine'
 
+# jobs
+require 'shopify_app/webhooks_manager_job'
+
 # helpers and concerns
 require 'shopify_app/shop'
 require 'shopify_app/session_storage'
 require 'shopify_app/controller'
 require 'shopify_app/sessions_controller'
 require 'shopify_app/login_protection'
+require 'shopify_app/webhooks_manager'
 require 'shopify_app/utils'
 
 # session repository
